<resources>
    <string name="filter_everything">Everything</string>
    <string name="filter_message">Message</string>
    <string name="filter_transaction">Transaction</string>
    <string name="filter_photo">Photo</string>
    <string name="filter_file">File</string>
    <string name="filter_location">Location</string>
    <string name="filter_contact">Contact</string>
    <string name="filter_identity_attribute">Identity Attribute</string>
    <string name="menu_navigation_wallet_overview">Wallet</string>
    <string name="menu_navigation_identity">Identity</string>
    <string name="menu_navigation_qrcode_scan_controller" />
    <string name="menu_navigation_exchange">Exchange</string>
    <string name="menu_navigation_contacts">Contacts</string>
    <string name="menu_navigation_settings">Settings</string>
    <string name="menu_navigation_exchange_balance">Wallet Balance</string>
    <string name="menu_exchange_deposit">Deposit Money from online Bank</string>
    <string name="menu_exchange_withdraw">Withdraw Money to online Bank</string>
    <string name="menu_exchange_transfer_qrcode">Money Transfer using QR-code</string>
    <string name="menu_exchange_transfer_contact">Money Transfer to Contact</string>
    <string name="menu_exchange_transfer_request">Request Money Transfer</string>
    <string name="menu_contact_chat_attachment_camera">Camera</string>
    <string name="menu_contact_chat_attachment_photo">Photo from Library</string>
    <string name="menu_contact_chat_attachment_file">File</string>
    <string name="menu_contact_chat_attachment_location">Location</string>
    <string name="menu_contact_chat_attachment_contact">Contact</string>
    <string name="menu_contact_chat_attachment_identity_attribute">Identity Attribute</string>
    <string name="menu_contact_chat_attachment_transfer_money">Transfer Money</string>
    <string name="menu_contact_chat_attachment_transfer_request">Request Money</string>
    <string name="menu_contact_chat_view_contact">Contact</string>
    <string name="menu_contact_chat_view_media">Media</string>
    <string name="menu_contact_chat_options_contact_name">Rename Contact</string>
    <string name="menu_contact_chat_options_contact_remove">Remove Contact</string>
    <string name="menu_contact_chat_options_contact_archive">Archive Chat</string>
    <string name="menu_contact_chat_options_contact_unarchive">Unarchive Chat</string>
    <string name="menu_contact_chat_options_copy_public_key">Copy Public Key</string>
    <string name="menu_contact_chat_options_contact_share">Share this Contact</string>
    <string name="menu_contact_chat_options_search_filter">Search/Filter Chat</string>
    <string name="menu_contact_chat_options_contact_add">Add Contact</string>
    <string name="menu_contact_chat_options_contact_mute">Mute</string>
    <string name="menu_contact_chat_options_contact_unmute">Unmute</string>
    <string name="menu_contact_chat_options_contact_block">Block Contact</string>
    <string name="menu_contact_chat_options_contact_unblock">Unblock Contact</string>
    <string name="menu_contact_chat_options_contact_remove_conversation">Clear Chat</string>
    <string name="menu_contacts_search">Search</string>
    <string name="menu_contacts_add">Add Contact</string>
    <string name="menu_identity_attribute_add">Add Identity Attribute</string>
    <string name="menu_identity_attestations_add">Add Attestation</string>
    <string name="menu_identity_attestations_authority_add">Add Attestation Authority</string>
    <string name="menu_identity_edit">Edit Identity</string>
    <string name="menu_identity_remove">Remove Identity</string>
    <string name="menu_identity_authorities_view">View Trusted Authorities</string>
    <string name="menu_wallet_overview_settings">Settings</string>
    <string name="menu_identity_attribute_edit">Edit Identity Attribute</string>
    <string name="menu_identity_attribute_delete">Delete Identity Attribute</string>
    <string name="menu_identity_attribute_share">Share Identity Attribute</string>
    <string name="menu_maps_normal_map">Normal Map</string>
    <string name="menu_maps_hybrid_map">Hybrid Map</string>
    <string name="menu_maps_satellite_map">Satellite Map</string>
    <string name="menu_maps_terrain_map">Terrain Map</string>
    <string name="menu_wallet_overview_trust">Trust Scores</string>
    <string name="menu_trust_insert_random">Add Random Scores</string>
    <string name="menu_trust_clear_scores">Clear Scores</string>
    <string name="dialog_title_exchange_transfer">Transfer Money</string>
    <string name="dialog_title_exchange_request">Request Money</string>
    <string name="dialog_title_exchange_transaction">Transaction</string>
    <string name="dialog_title_contact_share">Share Contact</string>
    <string name="dialog_title_contact_name">Contact Name</string>
    <string name="dialog_title_contact_nickname">Contact Nickname</string>
    <string name="dialog_title_contact_add">Add Contact</string>
    <string name="dialog_title_contact_chat_send_location">Send Location</string>
    <string name="dialog_title_exchange_gateway_connect">Connect to Gateway</string>
    <string name="dialog_title_exchange_gateway_add">Add Gateway</string>
    <string name="dialog_title_exchange_gateway_sell">Sell to Gateway</string>
    <string name="dialog_title_attestation">Attestation</string>
    <string name="dialog_title_attestation_authorities">Trusted Authorities</string>
    <string name="dialog_title_attestation_authority_add">Add Authority</string>
    <string name="dialog_title_attestation_confirm">Confirm Attestation Request</string>
    <string name="dialog_title_attestation_request">Attestation Request</string>
    <string name="dialog_title_attestation_verify">Verify Attestation</string>
    <string name="dialog_title_attestation_invalid">Invalid Attestation</string>
    <string name="dialog_title_attestation_valid">Valid Attestation</string>
    <string name="dialog_title_attribute_details">Attribute Details</string>
    <string name="dialog_title_attribute_share">Share Identity Attribute</string>
    <string name="dialog_title_identity_details">Identity Details</string>
    <string name="dialog_title_scan_options">Choose an option below</string>
    <string name="dialog_title_identity_onboarding_start">Import Identity</string>
    <string name="dialog_title_identity_onboarding_scan">Scan Document</string>
    <string name="dialog_title_identity_onboarding_read">Read Document</string>
    <string name="dialog_title_identity_onboarding_confirm">Confirm Identity</string>
    <string name="dialog_filter_by">Filter by</string>
    <string name="dialog_choose_option">Choose Option</string>
    <string name="dialog_contact_options">Contact Options</string>
    <string name="dialog_exchange_options">Exchange Options</string>
    <string name="dialog_contacts_chats_view">View Chats</string>
    <string name="dialog_no_gateway_warning">Missing Gateway</string>
    <string name="btn_transfer">Transfer</string>
    <string name="btn_slide_to_transfer">Slide to Transfer</string>
    <string name="btn_send_request">Send request</string>
    <string name="btn_slide_to_request">Slide to Request</string>
    <string name="btn_create_request_qr">Create Request QR</string>
    <string name="btn_slide_to_request_qr">Slide to Request QR</string>
    <string name="btn_share">Share</string>
    <string name="btn_save">Save</string>
    <string name="btn_add">Add</string>
    <string name="btn_gateway_connect">Connect to Gateway</string>
    <string name="btn_slide_to_gateway_connect">Slide to Connect</string>
    <string name="btn_slide_to_gateway_add">Slide to Add</string>
    <string name="btn_sell">Sell</string>
    <string name="btn_slide_to_sell">Slide to Sell</string>
    <string name="btn_authority_add">Add Authority</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_slide_to_confirm">Slide to Confirm</string>
    <string name="btn_request">Request</string>
    <string name="btn_verify">Verify</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_contact_add">Add Contact</string>
    <string name="btn_attestation_add">Add Attestation</string>
    <string name="btn_show_more">Show more…</string>
    <string name="btn_transaction_resend">Resend Transaction</string>
    <string name="btn_transaction_resend_trying">Trying to resend…</string>
    <string name="btn_transaction_sign">Sign Transaction</string>
    <string name="btn_send">Send</string>
    <string name="btn_load_more_messages">Load more messages…</string>
    <string name="btn_contact_unblock">Unblock Contact</string>
    <string name="btn_confirm_identity">Confirm Identity</string>
    <string name="btn_scan_again">Scan Again</string>
    <string name="btn_start_importing">Start Importing</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_start_over">Start Over</string>
    <string name="btn_go_back">Go back</string>
    <string name="btn_block">Block</string>
    <string name="text_recipient">Recipient</string>
    <string name="text_select_recipient">Select the recipient</string>
    <string name="text_no_contacts">There are no contacts</string>
    <string name="text_transaction_amount">Enter the transaction amount</string>
    <string name="text_optional_message">(Optional) message to receiver…</string>
    <string name="text_add_to_address_book">Add contact to address book</string>
    <string name="text_allow_unverified_transfer">Allow users to pay with unverified balance</string>
    <string name="text_select_contact_share">Select the contact to share</string>
    <string name="text_provide_name_for_contact">Provide a name for this contact</string>
    <string name="text_send_publickey_or_qr">Provide QRcode to your friend</string>
    <string name="text_provide_publickey">Provide public key to your friend</string>
    <string name="text_paste_publickey_or_name">Paste or scan public key of contact and provide a name</string>
    <string name="text_paste_publickey_or_nickname">Paste or scan public key of contact and provide a nickname</string>
    <string name="text_contact_publickey">Contact Public Key</string>
    <string name="text_contact_name">Contact name</string>
    <string name="text_contact_nickname">Contact Nickname</string>
    <string name="text_current_balance">Current Balance</string>
    <string name="text_sell_amount">Sell Amount</string>
    <string name="text_gateway">Gateway</string>
    <string name="text_gateway_save">Save Gateway</string>
    <string name="text_gateway_prefer">Prefer Gateway</string>
    <string name="text_attestation_confirm"><![CDATA[An attestation has been requested with name <b>%s</b> and format <b>%s</b>. Please confirm the attestation by providing the requested value.]]></string>
    <string name="text_attestation_provide_value">Provide requested attribute value</string>
    <string name="text_search_filter_chat">Search</string>
    <string name="text_identity_onboarding_read_subtitle">Hold your document steady to the back of your phone until it has finished.</string>
    <string name="text_identity_onboarding_read_success">Document successfully read.\nPlease continue to confirm your identity.</string>
    <string name="text_identity_onboarding_read_reading">Reading document…\nPlease hold steady until finished.</string>
    <string name="text_gateway_warning_first">No gateway has been defined, please make sure to add a gateway by scanning its identifying QR code. </string>
    <string name="text_gateway_warning_second">A gateway is used to exchange between Euros and Euro tokens, and to verify balances. If no gateway is defined, no balances and transactions can be verified.</string>
    <string name="text_gateway_warning_third">A gateway can be added now by pressing the add button, or later by scanning the QR code of a gateway via the scanner.</string>
</resources>