<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/actionFilterEverything"
        android:icon="@drawable/ic_everything"
        android:title="@string/filter_everything" />
    <item
        android:id="@+id/actionFilterMessage"
        android:icon="@drawable/ic_message"
        android:title="@string/filter_message" />
    <item
        android:id="@+id/actionFilterTransactions"
        android:icon="@drawable/ic_exchange"
        android:title="@string/filter_transaction" />
    <item
        android:id="@+id/actionFilterPhoto"
        android:icon="@drawable/ic_media"
        android:title="@string/filter_photo" />
    <item
        android:id="@+id/actionFilterFile"
        android:icon="@drawable/ic_file"
        android:title="@string/filter_file" />
    <item
        android:id="@+id/actionFilterLocation"
        android:icon="@drawable/ic_location"
        android:title="@string/filter_location" />
    <item
        android:id="@+id/actionFilterContact"
        android:icon="@drawable/ic_contact"
        android:title="@string/filter_contact" />
    <item
        android:id="@+id/actionFilterIdentityAttribute"
        android:icon="@drawable/ic_attribute"
        android:title="@string/filter_identity_attribute" />

</menu>
