<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actionSendCamera"
        android:icon="@drawable/ic_camera"
        android:title="@string/menu_contact_chat_attachment_camera" />
    <item
        android:id="@+id/actionSendPhotoFromLibrary"
        android:icon="@drawable/ic_media"
        android:title="@string/menu_contact_chat_attachment_photo" />
    <item
        android:id="@+id/actionSendFile"
        android:icon="@drawable/ic_file"
        android:title="@string/menu_contact_chat_attachment_file" />
    <item
        android:id="@+id/actionSendLocation"
        android:icon="@drawable/ic_location"
        android:title="@string/menu_contact_chat_attachment_location" />
    <item
        android:id="@+id/actionSendContact"
        android:icon="@drawable/ic_contact"
        android:title="@string/menu_contact_chat_attachment_contact" />
    <item
        android:id="@+id/actionSendIdentityAttribute"
        android:icon="@drawable/ic_attribute"
        android:title="@string/menu_contact_chat_attachment_identity_attribute" />
    <item
        android:id="@+id/actionTransferMoney"
        android:icon="@drawable/ic_exchange"
        android:title="@string/menu_contact_chat_attachment_transfer_money" />
    <item
        android:id="@+id/actionRequestMoney"
        android:icon="@drawable/ic_request"
        android:title="@string/menu_contact_chat_attachment_transfer_request" />

</menu>
