<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="12dp"
    android:paddingBottom="12dp"
    android:background="@drawable/dialog_rounded_top"
    android:backgroundTint="?attr/dialogColor">

    <include
        android:id="@+id/dialogHandle"
        layout="@layout/handle_dialog" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogHandle">

        <TextView
            android:id="@+id/tvTitleAdd"
            style="@style/DialogTitle"
            android:text="@string/dialog_no_gateway_warning"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvGatewayMissingFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="8dp"
        android:text="@string/text_gateway_warning_first"
        android:textColor="?attr/onDialogColor"
        tools:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clTitle" />
    <TextView
        android:id="@+id/tvGatewayMissingSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="8dp"
        android:text="@string/text_gateway_warning_second"
        android:textColor="?attr/onDialogColor"
        tools:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGatewayMissingFirst" />
    <TextView
        android:id="@+id/tvGatewayMissingThird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="8dp"
        android:text="@string/text_gateway_warning_third"
        android:textColor="?attr/onDialogColor"
        tools:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGatewayMissingSecond" />

    <Button
        android:id="@+id/btnScanStart"
        style="@style/ButtonGreenRounded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/btn_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGatewayMissingThird" />

</androidx.constraintlayout.widget.ConstraintLayout>
