<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clReadView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    android:paddingVertical="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/DialogTitle"
            android:layout_width="match_parent"
            android:text="@string/dialog_title_identity_onboarding_read" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            android:text="@string/text_identity_onboarding_read_subtitle" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp">

            <ImageView
                android:id="@+id/ivReadDocumentIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_document_scan_nfc"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/pbReading"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:indeterminateTint="?attr/colorAccent"
                android:indeterminateTintMode="src_atop"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/ivReadingFinishedIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_badge_ok"
                android:padding="15dp"
                android:visibility="gone"
                android:backgroundTint="?attr/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/ivReadingFinishedIconError"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_badge_fail"
                android:padding="15dp"
                android:visibility="gone"
                android:backgroundTint="?attr/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvReading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="16dp"
            android:visibility="gone"
            tools:visibility="visible"
            android:text="@string/text_identity_onboarding_read_reading"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tvReadingSuccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:visibility="gone"
            tools:visibility="visible"
            android:text="@string/text_identity_onboarding_read_success"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvReadingFailed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:visibility="gone"
            tools:visibility="visible"
            android:textColor="?attr/colorError"
            tools:text="An error occurred reading your document, go back and try again"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/btnReadAgain"
            style="@style/ButtonMutedRounded"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:text="@string/btn_start_over"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btnReadContinue"
            style="@style/ButtonMutedRounded"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:text="@string/btn_continue"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnReadCancel"
            style="@style/ButtonMutedRounded"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginEnd="6dp"
            android:text="@string/btn_cancel" />

        <Button
            android:id="@+id/btnReadPrevious"
            style="@style/ButtonMutedRounded"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="6dp"
            android:text="@string/btn_go_back" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
