<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="12dp"
    android:paddingBottom="12dp"
    android:background="@drawable/dialog_rounded_top"
    android:backgroundTint="?attr/dialogColor">

    <include
        android:id="@+id/dialogHandle"
        layout="@layout/handle_dialog" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_marginTop="8dp"
        style="@style/DialogTitle"
        android:text="@string/dialog_title_attestation_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogHandle" />

    <TextView
        android:id="@+id/tvSubTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/text_attestation_confirm"
        android:textColor="?attr/onDialogColor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clAttributeValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubTitle">

        <EditText
            android:id="@+id/etAttributeValue"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/pill_rounded"
            android:backgroundTint="@color/light_gray"
            android:hint="@string/text_attestation_provide_value"
            android:inputType="textCapWords"
            android:paddingVertical="8dp"
            android:paddingHorizontal="8dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAttributeValueAutoGenerated"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/pill_rounded"
            android:backgroundTint="@color/light_gray"
            android:paddingVertical="8dp"
            android:paddingHorizontal="8dp"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:textStyle="italic"
            android:textColor="@color/gray"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnConfirmRequestedAttestation"
        style="@style/ButtonGreenRounded"
        android:layout_marginTop="8dp"
        android:text="@string/btn_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clAttributeValue" />

</androidx.constraintlayout.widget.ConstraintLayout>
